# libtestrig

./: .clangd  .gitattributes  .gitignore  CMakeLists.txt  README.md  libtestrig_api.h  meson.build  vscl_export.h
.cache/clangd/index/: ipc.c.DFD9B0B675B50901.idx  ipc.h.A2B3B47FBF4200CE.idx
.github/workflows/: build-cmake.yml  build-meson.yml  build.yml  test.yml
cmake/: target_copy_dll.cmake
epos2/: connect.c  connect.h  constants.h  controller.h  definitions.h  epos2.c  epos2.h  ident.c  ident.h  identify.c  identify.h  meson.build
ipc/: constants.c  constants.h  ipc.c  ipc.h  meson.build  message.c  message.h  os.c  os.h
lib/: ipc.c  ipc.h  libtestrig_api.h  meson.build
lib/epos2/: LICENSE  connect.c  connect.h  definitions.c  definitions.h  epos2.c  epos2.h  identify.c  identify.h  manage.c  manage.h  meson.build
lib/ipc/: LICENSE  ipc.h  meson.build  os.c  os.h
src/: actions.c  actions.h  args.c  args.h  help.c  help.h  main.c  meson.build  other_args.h
test/: CMakeLists.txt  copy_dlls.meson.py  meson.build  test_fork_ipc.c  test_listenclient.c  test_preset_sockpath.c  test_sock_name.c  test_subprocess_ipc.c  test_win_client.c  test_win_mgr.c  test_win_server.c
